# qfreerdp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clipboard-entry.h  main.qml  mini-qf-client.cc  qf_channel_client_handler.c  qf_log.h  qf_util.h  rdp-view-item.h
.codex/: qt-qml-rdp-client-goal.md
.demos/qfreerdp-client/: CMakeLists.txt  configure.sh  mini-qf-client.cc  qf_channel_client_handler.c  qf_util.h  qt-qml-rdp-client-goal.md  rdp-view-item.h
.demos/qfreerdp-client/.qtenv/: CMakeLists.txt  main.cpp  main.qml
ref-tmp/: addin.h  cliprdr_format.c  cliprdr_main.c
tools/: set-file-uri-clipboard.sh
